queue and moves w/ exceptions working!